Based Paper additions.